Closed
Bug 1516221
Opened 7 years ago
Closed 7 years ago
convert NS_STYLE_COLOR_ADJUST to an enum class in nsStyleConsts.h
Categories
(Core :: CSS Parsing and Computation, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla66
| Tracking | Status | |
|---|---|---|
| firefox66 | --- | fixed |
People
(Reporter: sharath.savasere, Assigned: sharath.savasere)
References
Details
Attachments
(1 file, 1 obsolete file)
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0
Steps to reproduce:
convert #define NS_STYLE_COLOR_ADJUST values to enum class in nsStyleConsts.h
grep 'NS_STYLE_COLOR_ADJUST' and replace it with the enum values
Actual results:
The code is not compiling successfully.
Throwing errors in build command for `style v0.0.1 (/home/sharath/src/mozilla-central/servo/components/style)`
Expected results:
successful compilation
| Assignee | ||
Comment 1•7 years ago
|
||
Updated•7 years ago
|
Assignee: nobody → sharath.savasere
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•7 years ago
|
Component: Untriaged → CSS Parsing and Computation
Priority: -- → P3
Product: Firefox → Core
| Assignee | ||
Comment 2•7 years ago
|
||
Depends on D15284
Updated•7 years ago
|
Attachment #9033188 -
Attachment is obsolete: true
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f4556b4f6917
changes to implement enum class for #define NS_STYLE_COLOR_ADJUST. r=emilio
Comment 4•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox66:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
You need to log in
before you can comment on or make changes to this bug.
Description
•