Bug 1516221 - changes to implement enum class for #define NS_STYLE_COLOR_ADJUST. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D15284